--- a/src/Metronome.css
+++ b/src/Metronome.css
@@ -1,26 +1,53 @@
 /*metronome*/
+.triangle-up {
+  width: 0;
+  height: 0;
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
+  border-bottom: 30px solid #555;
+  position: relative ;
+  margin-right: 25px;
+  right: 0;
+  text-align: bottom;
+  
+  float: left;
+
+}
+
+.triangle-down {
+  width: 0;
+  height: 0;
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
+  border-top: 30px solid #555;
+  position: relative ;
+  margin: 25px;
+  
+  float: right;
+
+}
+
 .metronome {
-	text-align: center;
-	max-width: 375px; 
-	margin: 0 auto;
-	padding: 30 px;
+  text-align: center;
+  max-width: 375px; 
+  margin: 0 auto;
+  padding: 30 px;
 }
 
 .bpm-slider input {
-	width: 100%;
-	margin: 10px;
+  width: 100%;
+  margin: 10px;
 }
 
-.metronome button {
-	background: #c94d46;
-	padding: 10px;
-	border: 1px solid #832420;
-	border-radius: 2px;
-	width: 100px;
-	color: #fff;
-	font-size: 18 px;
-}
-
+/*.metronome button {
+  background: #c94d46;
+  padding: 10px;
+  border: 1px solid #832420;
+  border-radius: 2px;
+  width: 100px;
+  color: #fff;
+  font-size: 18 px;
+}/*
 /*buttons*/
 .btn {
   background-color: #008CBA;
@@ -32,8 +59,25 @@
   padding-left: 40px;
   padding-right: 40px;
   border-radius: 10px;
-  
 }
+
+.btn1 {
+  /*right: 0;*/
+  /*background: url(./saveIcon.png);*/
+  background-color: #555555;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  padding-left: 40px;
+  padding-right: 40px;
+  border-radius: 10px;
+  margin-top: 15px;
+  /*margin-left: 30px;*/
+
+}
+
 
 /*dropdown*/
 /* The container <div> - needed to position the dropdown content */
