--- a/src/Metronome.css
+++ b/src/Metronome.css
@@ -75,7 +75,7 @@
 
 .unhide {
   display:none;
-  font-size: 2em
+  font-size: 1.5em
 }
 
 
@@ -89,8 +89,8 @@
   }
   
   .enlarge {
-    display:flex;
-    flex-grow:1000;
+    display:flex; 
+    margin-left: 125px;
   }
 }
 
