--- a/src/Metronome.css
+++ b/src/Metronome.css
@@ -29,14 +29,27 @@
 
 .metronome {
   text-align: center;
-  max-width: 375px; 
+  display: inline-block; 
   margin: 0 auto;
-  padding: 30 px;
+  padding: 0px 0px 10px 0px;
+}
+
+.leftt-metro
+{
+  float: left;
+}
+
+.rightt-download
+{
+  float: right;
+  padding-left: 15px;
+  padding-top: 0px;
 }
 
 .bpm-slider input {
   width: 100%;
   margin: 10px;
+  color: blue;
 }
 
 /*.metronome button {
@@ -66,12 +79,11 @@
   /*background: url(./saveIcon.png);*/
   background-color: #555555;
   color: white;
-  padding: 16px;
+  padding: 16px 20px;
+  padding-right: 20px;
   font-size: 16px;
   border: none;
   cursor: pointer;
-  padding-left: 40px;
-  padding-right: 40px;
   border-radius: 10px;
   margin-top: 15px;
   /*margin-left: 30px;*/
@@ -144,3 +156,31 @@
   color: green;
 }
 
+
+#strip-wrapper
+{
+  
+  display: inline-block;
+  padding: 0px 0px 6px 0px;
+  margin-bottom: 0px;
+  vertical-align: middle;
+  /*padding-bottom: 16px;*/
+}
+
+.leftt
+{
+  
+  padding-right: 5px;
+  padding-top: 14px;
+  float: left;
+}
+
+.rightt
+{
+  float: right;
+}
+
+.center
+{
+  float: center;
+}
